# gomoku_ai

./: .gitignore  CMakeLists.txt  Makefile
include/: BitBoard.hpp  Board.hpp  BoardEvaluator.hpp  Game.hpp  GoAI.hpp  GoProgram.hpp  PlayerTypes.hpp  Program.hpp  TranspositionTable.hpp  Utils.hpp  Vec2.hpp
src/: BitBoard.cpp  Board.cpp  BoardEvaluator.cpp  Game.cpp  GoAI.cpp  GoProgram.cpp  Program.cpp  TranspositionTable.cpp  Utils.cpp  main.cpp
src/main/: main.cpp
tests/: tests.cpp  tests_patterns.cpp
